<resources>
    <string name="app_name">BeautyAPI</string>
    <string name="beauty_sensetime">SenseTime</string>
    <string name="beauty_faceunity">FaceUnity</string>
    <string name="beauty_bytedance">ByteDance</string>
    <string name="beauty_cosmos">Cosmos</string>
    <string name="audience">Audience</string>
    <string name="broadcast">Broadcast</string>
    <string name="beauty_process_auto">Auto</string>
    <string name="beauty_process_i420">I420</string>
    <string name="beauty_process_texture">Texture</string>
    <string name="beauty_capture_agora">Agora</string>
    <string name="beauty_capture_custom">Custom</string>
    <string name="beauty_convert_sdk">Sdk</string>
    <string name="beauty_convert_beauty">Beauty</string>

    <string name="beauty_role">Role</string>
    <string name="beauty_channel_name_cannot_be_empty">Channel name cannot be empty</string>
    <string name="beauty_no_permission_for_live_streaming">No permission for live streaming</string>
    <string name="beauty_switch">Beauty switch</string>
    <string name="beauty_video_enhancement">Video enhancement</string>
    <string name="beauty_i1420_switch">I420 switch (for testing)</string>
    <string name="beauty_texture_async_switch">TextureAsync switch (for testing)</string>
    <string name="beauty_encoding_resolution">Encoding resolution</string>
    <string name="beauty_encoding_frame_rate">Encoding frame rate</string>
    <string name="beauty_collection_method">Beauty collection method</string>
    <string name="beauty_processing_method">Beauty processing method (for testing)</string>
    <string name="beauty_cache_size">Beauty cache count (for testing)</string>
    <string name="beauty_texture_convert_type">Beauty texture convert type (for testing)</string>
    <string name="beauty_join_channel">Join channel</string>
    <string name="beauty_channel_name">Channel name</string>

    <string name="beauty_group_beauty">Beauty</string>
    <string name="beauty_item_none">None</string>
    <string name="beauty_item_beauty_smooth">Smooth skin</string>
    <string name="beauty_group_adjust">Adjust</string>
    <string name="beauty_item_adjust_contrast">Contrast</string>
    <string name="beauty_item_adjust_saturation">Saturation</string>
    <string name="beauty_item_adjust_sharpen">Sharpen</string>
    <string name="beauty_item_adjust_clarity">Clarity</string>
    <string name="beauty_item_beauty_redden">Redden</string>
    <string name="beauty_item_beauty_bright_eye">Bright eyes</string>
    <string name="beauty_item_beauty_remove_dark_circles">Remove dark circles</string>
    <string name="beauty_item_beauty_remove_nasolabial_folds">Remove nasolabial folds</string>
    <string name="beauty_strength">Strength</string>
    <string name="beauty_item_beauty_whiten">Whiten</string>
    <string name="beauty_item_beauty_overall">Slim face</string>
    <string name="beauty_item_beauty_cheekbone">Slim cheekbones</string>
    <string name="beauty_item_beauty_eye">Big eyes</string>
    <string name="beauty_item_beauty_nose">Slim nose</string>
    <string name="beauty_item_beauty_chin">Chin</string>
    <string name="beauty_item_beauty_jawbone">Jawbone</string>
    <string name="beauty_item_beauty_forehead">Forehead</string>
    <string name="beauty_item_beauty_mouth">Mouth shape</string>
    <string name="beauty_item_beauty_teeth">Teeth whitening</string>
    <string name="beauty_group_filter">Filter</string>
    <string name="beauty_group_effect">Effects</string>
    <string name="beauty_group_sticker">Stickers</string>
    <string name="beauty_item_filter_cream">Creamy</string>
    <string name="beauty_item_filter_mokalong">Macaroon</string>
    <string name="beauty_item_filter_oxgen">Oxygen</string>
    <string name="beauty_item_filter_wuyu">Story</string>
    <string name="beauty_item_filter_po9">Seaside characters</string>
    <string name="beauty_item_filter_lolita">Lolita</string>
    <string name="beauty_item_filter_mitao">Peach</string>
    <string name="beauty_item_filter_yinhua">Cherry Blossom</string>
    <string name="beauty_item_filter_beihaidao">Hokkaido</string>
    <string name="beauty_item_filter_s3">Journey</string>
    <string name="beauty_item_effect_baixi">Fair</string>
    <string name="beauty_item_effect_tianmei">Sweet</string>
    <string name="beauty_item_effect_cwei">C position</string>
    <string name="beauty_item_effect_yuanqi">Energetic</string>
    <string name="beauty_item_sticker_biti">Runny nose</string>
    <string name="beauty_item_sticker_zhounian">Anniversary</string>
    <string name="beauty_item_sticker_huahua">Flowers</string>
    <string name="beauty_item_sticker_wochaotian">So sweet</string>

    <string name="remote_video_default_dimension_ratio" translatable="false">9:16</string>
    <string name="beauty_item_beauty_face_three">3D facial features</string>
    <string name="beauty_item_effect_diadiatu">Didi Rabbit</string>
    <string name="beauty_item_effect_hunxue">Mixed-race</string>
    <string name="beauty_item_sticker_sdlu">Moose</string>
    <string name="beauty_item_sticker_zhu">Piggy</string>
    <string name="beauty_item_effect_oumei">European and American</string>
    <string name="beauty_item_sticker_shangbanle">Back to work</string>
    <string name="beauty_item_effect_heitonghua">Dark fairytale</string>
    <string name="beauty_item_sticker_weixiao">Smile</string>
    <string name="beauty_item_sticker_xiha">Hip-hop</string>
    <string name="beauty_item_sticker_zhaocaimao">Fortune cat</string>
</resources>