<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Version" />

        <TextView
            android:id="@+id/tvBeautySdk"
            android:layout_width="0dp"
            android:gravity="end|center_vertical"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            tools:text="1.0.0" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"/>

    <Switch
        android:id="@+id/swBeauty"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/beauty_switch"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"/>

    <Switch
        android:id="@+id/swColorEnhance"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/beauty_video_enhancement"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee"/>

    <Switch
        android:id="@+id/swI420"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/beauty_i1420_switch"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:background="#eeeeee"/>

    <Switch
        android:id="@+id/swTextureAsync"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:visibility="gone"
        android:text="@string/beauty_texture_async_switch"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/beauty_encoding_resolution"/>

        <Spinner
            android:id="@+id/spResolution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:entries="@array/resolution"
            android:paddingVertical="8dp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        android:background="#eeeeee"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/beauty_encoding_frame_rate"/>

        <Spinner
            android:id="@+id/spFrameRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:entries="@array/frame_rate"
            android:paddingVertical="8dp" />

    </LinearLayout>

</LinearLayout>