<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="12dp">

    <EditText
        android:id="@+id/etChannelName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/beauty_channel_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/beauty_role" />

        <Spinner
            android:id="@+id/spRoleType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:entries="@array/role_type"
            android:gravity="end"
            android:paddingVertical="8dp"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/beauty_encoding_resolution" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spResolution"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:entries="@array/resolution"
            android:gravity="end"
            android:paddingVertical="8dp"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/beauty_encoding_frame_rate" />

        <Spinner
            android:id="@+id/spFrameRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:entries="@array/frame_rate"
            android:gravity="end"
            android:paddingVertical="8dp"
            android:textAlignment="viewEnd" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/beauty_group_beauty" />

        <Spinner
            android:id="@+id/spBeautyType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:entries="@array/beauty_type"
            android:gravity="end"
            android:paddingVertical="8dp"
            android:textAlignment="viewEnd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/beauty_collection_method" />

        <Spinner
            android:id="@+id/spBeautyCaptureMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:entries="@array/beauty_capture_mode"
            android:gravity="end"
            android:paddingVertical="8dp"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:text="@string/beauty_processing_method" />

        <Spinner
            android:id="@+id/spBeautyProcessMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:entries="@array/beauty_process_mode"
            android:gravity="end"
            android:paddingVertical="8dp"
            android:textAlignment="viewEnd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="EnableFence(测试用)" />

        <Switch
            android:id="@+id/swFence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:checked="true"
            android:paddingVertical="8dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/beauty_join_channel" />
</LinearLayout>